[gd_scene load_steps=11 format=3 uid="uid://dkivuisd54dvy"]

[ext_resource type="Script" path="res://Scenes and Scripts/Environment/Jungle/base_tree.gd" id="1_4w8yc"]
[ext_resource type="Texture2D" uid="uid://coailcyntjk6n" path="res://Sunnyside_World_Assets/Elements/Plants/spr_deco_tree_01_strip4.png" id="1_jh703"]
[ext_resource type="PackedScene" uid="uid://bsveh0m46ws16" path="res://Scenes and Scripts/Components/health_component.tscn" id="3_64wmi"]
[ext_resource type="PackedScene" uid="uid://qviteqdp4h14" path="res://Scenes and Scripts/Components/hurt_box_component.tscn" id="4_yv40k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cnbf1"]
atlas = ExtResource("1_jh703")
region = Rect2(0, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnj34"]
atlas = ExtResource("1_jh703")
region = Rect2(32, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_itkqt"]
atlas = ExtResource("1_jh703")
region = Rect2(64, 0, 32, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5033d"]
atlas = ExtResource("1_jh703")
region = Rect2(96, 0, 32, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_snvos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnbf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnj34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itkqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5033d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_crk6l"]
radius = 12.0416

[node name="BaseTree" type="Node2D" groups=["cut_tree"]]
script = ExtResource("1_4w8yc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_snvos")

[node name="HealthComponent" parent="." instance=ExtResource("3_64wmi")]

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_yv40k")]
damage = 0
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_crk6l")

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="hit" from="HurtBoxComponent" to="." method="_on_hurt_box_component_hit"]
